# src/api/controllers/product.controller.ts
@@ -8,7 +8,8 @@ import {
   updateProduct,
   productDetails,
   removeProduct,
-  updateProductPublishStatus
+  updateProductPublishStatus,
+  updateProductBlobService
 } from '../service-configurations/products'
 import { errorResponse, successReponse } from '../helper/http-response'
 import { IAdminAccountsEntity } from '../domain/entities/admin-accounts'
@@ -81,6 +82,26 @@ export const updateProductRoute = async (req: Request, res: Response, next: Next
       .updateOne(productId, req.body)
     res.status(httpStatus.ACCEPTED)
       .json(successReponse(removeProductOriginalFilepath(updatedProduct)))
+  } catch (error) {
+    next(new AppError({
+      message: error.message,
+      httpStatus: httpStatus.BAD_REQUEST
+    }))
+  }
+};
+
+export const uploadProductBlobRoute = async (req: Request, res: Response, next: NextFunction) => {
+  try {
+    const {productId = '', blobType = ''} = req.params
+    const file = <any> req.file || {};
+    console.log('fixle :>> ', file);
+    // updateProductBlobService()
+    //   .updateOne(productId, blobType, )
+    // const updatedProduct = await updateProduct()
+    //   .updateOne(productId, req.body)
+    // res.status(httpStatus.ACCEPTED)
+    //   .json(successReponse(removeProductOriginalFilepath(updatedProduct)))
+    res.end()
   } catch (error) {
     next(new AppError({
       message: error.message,
