# swagger/products/request.yml
@@ -48,6 +48,15 @@ components:
                   default: false
                   description: status or toggle if will save the card details upon checkout.
                   example: false
+      blobUploader: 
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                blob:
+                  type: string
+                  format: binary
   requestParams:
     Product:
       id:
@@ -56,3 +65,13 @@ components:
         schema:
           type: string
           required: true
+      blobType:
+        in: path
+        name: blobType
+        schema:
+          type: string
+          required: true
+          enum:
+            - 'content-zip'
+            - 'preview-image'
+            - 'preview-video'
